k8s/glados/bigotes/cms.bigot.es/cms-alpine-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-alpine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms-alpine
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cms-alpine
        tier: wordpress
    spec:
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
            - wordpress
      volumes:
      - name: html
        emptyDir: {}
      containers:
      - image: eu.gcr.io/bigotes-pro/cms/nginx:7081818
        name: nginx
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 200m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
          - name: html
            mountPath: /var/www/html
      - image: eu.gcr.io/bigotes-pro/cms/wp:4f10c1a
        name: wordpress
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 200m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        volumeMounts:
          - name: html
            mountPath: /var/www/html
