k8s/glados/bigotes/cms.bigot.es/cms-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cms
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cms
        tier: wordpress
    spec:
      containers:
      - image: eu.gcr.io/bigotes-pro/cms.bigot.es:latest
        name: wordpress
        resources:
          requests:
            cpu: 150m
            memory: 128Mi
          limits:
            cpu: 150m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: wordpress
