k8s/glados/bigotes/cms.bigot.es/cms-alpine-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cms-alpine
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
spec:
  type: ClusterIP
  selector:
    app: cms-alpine
  ports:
  - name: http
    port: 80
    targetPort: 80
