k8s/glados/bigotes/cms.bigot.es/cms-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cms
  # annotations:
  #   ingress.kubernetes.io/auth-type: basic
  #   ingress.kubernetes.io/auth-secret: cms-http-auth
spec:
  rules:
  - host: cms.bigot.es
    http:
      paths:
      - path: /
        backend:
          serviceName: cms
          servicePort: http
