k8s/glados/bigotes/cms.bigot.es/cms-ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cms
spec:
  entrypoints:
    - http
    - https
  tls: {}
  routes:
    - match: Host(`cms.bigot.es`)
      kind: Rule
      services:
        - name: cms-alpine
          port: 80
